Composer: Forward -> Redirect includes account signature
When I choose Forward -> Redirect while viewing an existing mail, I get a composer window and with 3.38 that window includes a signature, whereas before it did not include the signature. I note that trying to change the signature does nothing.
I suggest that choosing Forward -> Redirect should hide the signature choice drop-down and hide the signature.
I also suggest hiding any other fields don't contain any content from the original mail and aren't allowed to be modified.
This is a regression in evolution 3.38.
I use GNOME 3.38, Evolution 3.38.1-2 and WebKit 2.30.3-1 on Debian bullseye.
Edited by Milan Crha