I#1262 - Composer: Forward -> Redirect includes account signature

Hide the signature part on the redirect and make sure the signature
is not added into the message body.

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1262